E1-1687: fix spacing issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_mediacta-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_mediacta-section.scss
@@ -537,6 +537,7 @@
 
         div.cover {
           position: relative;
+          width: 100%;
         }
       }
     }
@@ -789,7 +790,7 @@
   @include respond-to-min($desktop) {
     .aem-Grid .aem-GridColumn {
       &:first-child {
-        padding-left: 0;
+        padding-left: 0 !important;
       }
 
       &:last-child {
@@ -798,7 +799,7 @@
 
       @include rtlBlock() {
         &:first-child {
-          padding-left: toRem(12);
+          padding-left: toRem(12) !important;
           padding-right: 0;
         }
 
